# adak

./: .gitignore  Makefile.am  NEWS  TODO  adak.lds.in  autogen.sh  blkdev.c  blkdev.h  command.c  command.h  configure.ac  cpld.c  fpga.c  hexdump.c  hexdump.h  i2c.c  i2c.h  mac.c  stream.c  stream.h  sx8634.c  usb-reset.c  utils.c  utils.h
